jvimalprasathdev/src/objects/StatusRatingMapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Mapping for Rating</description>
    <fields>
        <fullName>Default_Mapping_Fields_Name__c</fullName>
        <inlineHelpText>mapping field = lead/opp field eg: Stage__c=Stagename</inlineHelpText>
        <label>Default Mapping Fields Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LoanPurpose__c</fullName>
        <label>Loan Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <inlineHelpText>Please enter the Semicolon-separated values only. eg Lead;Opportunity</inlineHelpText>
        <label>Object Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_to_Apply__c</fullName>
        <label>Time to Apply</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>StatusRatingMapping</label>
</CustomObject>